# schneider-lab-to-nwb

./: README.md  corredera_2025_env.yaml  la_chioma_2024_env.yaml  make_env.yml  pyproject.toml  zempolich_2024_env.yaml
.github/workflows/: test-install.yml
src/schneider_lab_to_nwb/corredera_2025/: __init__.py  corredera_2025_audio_interface.py  corredera_2025_convert_session.py  corredera_2025_metadata.yaml  corredera_2025_notes.md  corredera_2025_nwbconverter.py  corredera_2025_open_ephys_recording_interface.py  corredera_2025_stimulus_interface.py  corredera_2025_white_matter_recording_interface.py  requirements-frozen.txt
src/schneider_lab_to_nwb/la_chioma_2024/: __init__.py  fix_openephys_xml_missing_channels.py  la_chioma_2024_behaviorinterface.py  la_chioma_2024_convert_session.py  la_chioma_2024_metadata.yaml  la_chioma_2024_notes.md  la_chioma_2024_nwbconverter.py  la_chioma_2024_tutorial.ipynb
src/schneider_lab_to_nwb/schneider_2024/: __init__.py  schneider_2024_behaviorinterface.py  schneider_2024_convert_all_sessions.py  schneider_2024_convert_session.py  schneider_2024_intrinsic_signal_imaging_interface.py  schneider_2024_metadata.yaml  schneider_2024_notes.md  schneider_2024_nwbconverter.py  schneider_2024_optogeneticinterface.py
src/schneider_lab_to_nwb/zempolich_2024/: __init__.py  requirements-frozen.txt  schneider_2024_convert_session.py  zempolich_2024_behaviorinterface.py  zempolich_2024_convert_all_sessions.py  zempolich_2024_convert_session.py  zempolich_2024_intrinsic_signal_imaging_interface.py  zempolich_2024_metadata.yaml  zempolich_2024_notes.md  zempolich_2024_nwbconverter.py  zempolich_2024_open_ephys_recording_interface.py  zempolich_2024_optogeneticinterface.py
