[project]
name = "schneider-lab-to-nwb"
version = "0.1.0"
description = "NWB conversion scripts, functions, and classes for Schneider  conversion"
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "paul.adkisson@catalystneuro.com" }]
maintainers = [{ name = "CatalystNeuro", email = "paul.adkisson@catalystneuro.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
  "neuroconv==0.6.6",
  "ndx-events==0.2.0",
  "spikeinterface==0.101.2"
]

[project.urls]
Repository="https://github.com/catalystneuro/schneider-lab-to-nwb"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.md
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
reverse_relative = true
known_first_party = ["schneider_lab_to_nwb"]
